test/expected/explain_rf_v-c++03.out
explain void f() &
             ^
14: error: reference qualified functions not supported until C++11
